change: homepage-wrap component, fix: banner width promobanner component

--- a/src/app/homepage/promobanner/promobanner.component.css
+++ b/src/app/homepage/promobanner/promobanner.component.css
@@ -1,6 +1,6 @@
 .banner {
   text-align: center;
-  width: 100vw;
+  width: 100%;
   font-family: "Rubik", sans-serif;
   background-color: #2d2d2d;
   display: grid;
